--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -29,7 +29,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="cart-backdrop"></div>
-    <div id="cart-modal"></div>
+    <div id="cart-overlay"></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
